# code-indexer

./: .codecov.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  ALGORITHM_DOCUMENTATION.md  BRANCH_TOPOLOGY_PLAN.md  CHANGELOG.md  CIDX_DAEMONIZATION_UPDATE_SUMMARY.md  CLAUDE.md  CLEANUP_COLLECTIONS_README.md  CONFIGURATION_REFERENCE.md  CONTRIBUTING.md  CSRF_TOKEN_BUG_ANALYSIS.md  Dockerfile  Dockerfile.ollama  E2E_TEST_REPORT.md  EPIC_CONTAINER_NATIVE_PORTS.md  GROOVY_PARSER_TEST_COVERAGE_ANALYSIS.md  PLAN.md  PORT_ALLOCATION.md  README.md  RELEASE_NOTES.md  SQL_PARSER_REWRITE_SUMMARY.md  TECH_DOC.md  check-cidx-availability.sh  check_enum.sh  ci-github.sh  ci-local.sh  cleanup-all-collections.py  cleanup-test-collections.sh  cleanup-test-containers.sh  cleanup-test-suite.sh  cleanup-with-collections.sh  cleanup_test_containers.py  code-indexer.yaml  debug_compose.py  debug_compose_generation.py  debug_multi_isolation.py  debug_multi_project.py  debug_project_names.py  (+39 more)
.claude/: settings.json
.claude/tasks/: pwdlib_migration_task.md
.code-indexer/: README.md  config.json  git_state.json  metadata.json
.code-indexer/docker/: Dockerfile.qdrant
.github/workflows/: auto-release.yml  build.yml  ci.yml  main.yml  publish.yml  release-mcpb.yml  release.yml
.github/workflows-disabled/: README.md
backlog/: EPIC_CHUNKING_IMPROVEMENTS.md  epic-cidx-prune-functionality.md  epic-eliminate-global-port-registry.md  epic-per-project-containers.md  epic-qdrant-payload-indexes-optimization.md  epic-qdrant-segment-size-configuration.md  epic-remove-cow-legacy-code.md  epic-test-infrastructure-two-container-architecture.md  macos-support-architecture-analysis.md  semantic-chunking-proposal.md
backlog/Completed/: EPIC_FIXED_SIZE_CHUNKING_REFACTOR.md  bugfix-index-resume-routing-logic.md  epic-ast-semantic-chunking.md  epic-per-project-containers.md
deployment/: cidx-server.service  deploy-server.sh
dev/debug/: example_e2e_integration.py  podman_troubleshooting.sh  qdrantdependant.txt  real_csharp_sample.cs  reconcile_branch_visibility_test_summary.md  sample.cs  test.py  test_branch_topology_e2e_fixed.py  test_chunk_behavior.py  test_collection_tracking.py  test_compare_search_methods_shared.py  test_complete_cow_flow.py  test_complete_workflow.py  test_cow_fix.py  test_cow_migration_real.py  test_cow_with_existing_collection.py  test_java_regex.py  test_java_regex2.py  test_java_regex3.py  test_migration_manual.py  test_start.sh  test_timestamp_mismatch.py  test_voyage_api.py  test_voyage_api_detailed.py  timestamp_comparison_conversion_summary.md  update_collection_registration.py  watch_reindex_issue_analysis.md
docs/: CHANGELOG.md  INDEXING_ALGORITHM.md  PERFORMANCE_VALIDATION_INFRASTRUCTURE.md  TEST_RESULTS_SUMMARY.md  ai-integration.md  ai-platform-conventions.md  algorithms.md  api-compatibility-elite-fix-summary.md  api-compatibility-fixes-summary.md  architecture.md  auto-update.md  collection-cleanup.md  configuration.md  credential-rotation-padding-fix.md  delegation-functions.md  dependencies.md  environment-setup.md  installation.md  login-consolidation-design-decisions.md  login-consolidation-plan.md  mcp-rest-parity-matrix.md  mcp-tool-documentation-improvements.md  mcp-tools-overhaul-spec.md  meta-repo-discovery.md  migration-to-v8.md  network-error-handling-implementation-summary.md  oidc-integration-plan.md  oidc-setup-and-configuration.md  oidc-test-results.md  operating-modes.md  productivity-analysis.md  query-guide.md  repository-topology.md  server-deployment.md  technical-details.md  temporal-search.md  v5.0.0-architecture-summary.md  v7.2.0-architecture-incremental-updates.md
executed_plans/: OPTIMIZE_QDRANT.md
plans/: CLEAN_INDEX_CANCELLATION_PLAN.md  DIRECT_CLAUDE_API_PLAN.md  FILESYSTEM_STATUS_ENHANCEMENT.md  FIX_DELETE_PROBLEM_PLAN.md  IMPORT_OPTIMIZATION_OPPORTUNITIES.md  SUBMODULE_AWARENESS.md  TECH_DOC_PLAN.md  THROTTLING_ANALYSIS_REPORT.md  THROTTLING_FIX_SUMMARY.md  THROTTLING_REMOVAL_PLAN.md
poc/: POC_RESULTS.md  README.md  __init__.py  benchmark.py  client.py  daemon_service.py  test_benchmark.py  test_poc_client.py  test_poc_daemon.py  test_poc_integration.py
reports/: BUG_REPORT_DAEMON_UX_REGRESSIONS.md  CODE_REVIEW_DAEMON_UX_FIXES.md  DAEMON_UX_FIXES_SUMMARY.md  GREP_VS_CIDX_FTS_PERFORMANCE_COMPARISON.md  architecture-gap-analysis-2025-11-16.md  manual-test-results-epic598-story605.txt  mcp-401-authentication-fix.md  mcp-endpoint-authentication-issue.md  mcp-query-filter-parameters-test-report.md  oauth-issuer-url-fix-report.md  race_conditions_fix_progress_20251030.md
scripts/: add_missing_imports.py  build_binary.py  fix_all_remaining_logging_calls.sh  fix_multiline_correlation_ids_ast.py  fix_multiline_logging_calls.py  generate_parity_matrix.py  glob_files.py  setup-mcpb.sh  update_logging_correlation_ids.py  verify_correlation_coverage.py
test_output_20250711_162156/: detailed_summary.txt
test_progress_demo/: test2.py
tests/: E2E_TESTING.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  README_parallel_test.md  TESTING_SAFETY.md  __init__.py  conftest.py  e2e_test_setup.py  load_env.py  manual_test_legacy_config_errors.py  pytest_e2e.ini  run_tests.py  setup_improvements.py  shared_container_fixture.py  suite_setup.py  test_accuracy_semantic_integration.py  test_actual_file_chunking.py  test_auto_update_service.py  test_branch_aware_deletion.py  test_branch_topology_e2e.py  test_branch_tracking_tdd.py  test_branch_transition_logic_fix.py  test_c_semantic_parser.py  test_cancellation_database_consistency.py  test_cancellation_handling.py  test_cancellation_high_throughput_processor.py  test_cancellation_integration.py  test_cancellation_minimal.py  test_change_detector.py  test_chunk_content_integrity.py  test_chunker.py  test_chunking_line_numbers_comprehensive.py  test_cidx_instruction_builder.py  test_cidx_prompt_generator.py  test_claude_e2e.py  test_claude_plan_e2e.py  test_claude_response_formatting_regression.py  test_claude_tool_tracking.py  test_clean_command.py  test_cleanup_system.py  test_cleanup_validation.py  (+156 more)
(+2707 files in other folders)
