[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-indexer"
version = "0.1.0"
description = "AI-powered semantic code search with local models"
authors = [
    {name = "Code Indexer Team", email = "team@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["ai", "code-search", "semantic-search", "ollama", "qdrant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Text Processing :: Indexing",
]

dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "docker>=6.0.0",
    "pyyaml>=6.0",
    "pathspec>=0.11.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/jsbattig/code-indexer"
Repository = "https://github.com/jsbattig/code-indexer"
Issues = "https://github.com/jsbattig/code-indexer/issues"

[project.scripts]
code-indexer = "code_indexer.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/code_indexer"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"